--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,7 @@
 #基本配置
 prject: a8e #车型
 devices: 192.168.7.16:5555 #安卓地址
-qnx_ip: "192.168.118.2" #qnxip地址，用于安卓连接到qnx
+qnx_ip: "192.168.118.2" #qnxip地址，用于安卓连接到qnx,IP地址必现加引号否则会报错
 qnx_user: root
 qnx_passwd: ""
 #输入数据
