--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,11 +8,11 @@ qnx_passwd: ""
 #输入数据
 qnx_screenshot_path: /var/share/ #qnx截图存放路径，为了能把qnx数据捞出，最好是qnx与安卓共享路径
 adb_pull_source: /data/nfs/nfs_share/screenshot.bmp #安卓路径
-adb_pull_dest: ./testdata/actual/ #本地路径
+adb_pull_dest: ./test/output_images/ #本地路径
 android_log_path: /mnt/user/log_android/ #安卓日志存放路径
 qnx_log_path: /data/nfs/nfs_log/ #qnx日志存放路径
-cfg_path: E:/工作文档/学习文档/自动化/cluster_autotest/common/canoe_project/Configuration.cfg #CANoe工程路径
-dbc_path: ./common/canoe_project/A8E_Proj_IHU_PFET_CMX+V1.25_20230421.dbc #DBC路径
+cfg_path: ./common/can/canoe_project/Configuration.cfg #CANoe工程路径
+dbc_path: ./common/can/canoe_project/A8E_Proj_IHU_PFET_CMX+V1.25_20230421.dbc #DBC路径
 video_path: E:/工作文档/学习文档/自动化/cluster_autotest/testdata #视频存放路径
 camera_index: 0 #摄像头索引
 video_fps: 25 #存储视频帧率
